# getoptify

./: pyproject.toml
docs/: CNAME  index.html
src/getoptify/: __init__.py  core.py
src/getoptify/core/: __init__.py
