[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "makefunc>=0.0.3",
]
description = "getoptify"
keywords = []
name = "getoptify"
readme = "README.rst"
version = "1.1.0.dev0"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/getoptify/#files"
Index = "https://pypi.org/project/getoptify/"
Source = "https://github.com/johannes-programming/getoptify"
Website = "https://getoptify.johannes-programming.online"
