[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "getoptify"
keywords = []
name = "getoptify"
readme = "README.rst"
requires-python = ">=3.6"
version = "1.0.2+local.1"

[project.license]
file = "LICENSE.txt"

[project.urls]
Documentation = "https://pypi.org/project/getoptify"
Download = "https://pypi.org/project/getoptify/#files"
Index = "https://pypi.org/project/getoptify/"
Source = "https://github.com/johannes-programming/getoptify"
